// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Socket: action subscribe block difficulty 1`] = `
Object {
  "name": "SUBSCRIBE/BLOCKS_DIFFICULTY",
  "type": "SOCKET_SUBSCRIBE_ROOM",
}
`;

exports[`Socket: action subscribe block frequency 1`] = `
Object {
  "name": "SUBSCRIBE/BLOCKS_FREQUENCY",
  "type": "SOCKET_SUBSCRIBE_ROOM",
}
`;

exports[`Socket: action subscribe block propagation 1`] = `
Object {
  "name": "SUBSCRIBE/BLOCKS_PROPAGATION",
  "type": "SOCKET_SUBSCRIBE_ROOM",
}
`;

exports[`Socket: action subscribe coinbase 1`] = `
Object {
  "name": "SUBSCRIBE/GET_COINBASE",
  "type": "SOCKET_SUBSCRIBE_ROOM",
}
`;

exports[`Socket: action subscribe contracts count 1`] = `
Object {
  "name": "SUBSCRIBE/CONTRACTS_COUNT",
  "type": "SOCKET_SUBSCRIBE_ROOM",
}
`;

exports[`Socket: action subscribe health 1`] = `
Object {
  "name": "SUBSCRIBE/GET_HEALTH",
  "type": "SOCKET_SUBSCRIBE_ROOM",
}
`;

exports[`Socket: action subscribe last block number 1`] = `
Object {
  "name": "SUBSCRIBE/LAST_BLOCK_NUMBER",
  "type": "SOCKET_SUBSCRIBE_ROOM",
}
`;

exports[`Socket: action subscribe peers 1`] = `
Object {
  "name": "SUBSCRIBE/GET_PEERS",
  "type": "SOCKET_SUBSCRIBE_ROOM",
}
`;

exports[`Socket: action subscribe shard count 1`] = `
Object {
  "name": "SUBSCRIBE/GET_SHARD_COUNT",
  "type": "SOCKET_SUBSCRIBE_ROOM",
}
`;

exports[`Socket: action subscribe transactions 1`] = `
Object {
  "name": "SUBSCRIBE/GET_TRANSACTIONS",
  "type": "SOCKET_SUBSCRIBE_ROOM",
}
`;

exports[`Socket: action subscribe transactions count 1`] = `
Object {
  "name": "SUBSCRIBE/TRANSACTIONS_COUNT",
  "type": "SOCKET_SUBSCRIBE_ROOM",
}
`;

exports[`Socket: action subscribe transactions type 1`] = `
Object {
  "name": "SUBSCRIBE/TRANSACTIONS_TYPE",
  "type": "SOCKET_SUBSCRIBE_ROOM",
}
`;

exports[`Socket: action subscribe uptime 1`] = `
Object {
  "name": "SUBSCRIBE/GET_NODE_UPTIME",
  "type": "SOCKET_SUBSCRIBE_ROOM",
}
`;

exports[`Socket: action subscribe users count 1`] = `
Object {
  "name": "SUBSCRIBE/USERS_COUNT",
  "type": "SOCKET_SUBSCRIBE_ROOM",
}
`;

exports[`Socket: action unsubscribe block frequency 1`] = `
Object {
  "name": "UNSUBSCRIBE/BLOCKS_FREQUENCY",
  "type": "SOCKET_UNSUBSCRIBE_ROOM",
}
`;

exports[`Socket: action unsubscribe block propagation 1`] = `
Object {
  "name": "UNSUBSCRIBE/BLOCKS_PROPAGATION",
  "type": "SOCKET_UNSUBSCRIBE_ROOM",
}
`;

exports[`Socket: action unsubscribe blocks difficulty 1`] = `
Object {
  "name": "UNSUBSCRIBE/BLOCKS_DIFFICULTY",
  "type": "SOCKET_UNSUBSCRIBE_ROOM",
}
`;

exports[`Socket: action unsubscribe coinbase 1`] = `
Object {
  "name": "UNSUBSCRIBE/GET_COINBASE",
  "type": "SOCKET_UNSUBSCRIBE_ROOM",
}
`;

exports[`Socket: action unsubscribe contracts count 1`] = `
Object {
  "name": "UNSUBSCRIBE/CONTRACTS_COUNT",
  "type": "SOCKET_UNSUBSCRIBE_ROOM",
}
`;

exports[`Socket: action unsubscribe health 1`] = `
Object {
  "name": "UNSUBSCRIBE/GET_HEALTH",
  "type": "SOCKET_UNSUBSCRIBE_ROOM",
}
`;

exports[`Socket: action unsubscribe last block number 1`] = `
Object {
  "name": "UNSUBSCRIBE/LAST_BLOCK_NUMBER",
  "type": "SOCKET_UNSUBSCRIBE_ROOM",
}
`;

exports[`Socket: action unsubscribe peers 1`] = `
Object {
  "name": "UNSUBSCRIBE/GET_PEERS",
  "type": "SOCKET_UNSUBSCRIBE_ROOM",
}
`;

exports[`Socket: action unsubscribe shard count 1`] = `
Object {
  "name": "UNSUBSCRIBE/GET_SHARD_COUNT",
  "type": "SOCKET_UNSUBSCRIBE_ROOM",
}
`;

exports[`Socket: action unsubscribe transactions 1`] = `
Object {
  "name": "UNSUBSCRIBE/GET_TRANSACTIONS",
  "type": "SOCKET_UNSUBSCRIBE_ROOM",
}
`;

exports[`Socket: action unsubscribe transactions count 1`] = `
Object {
  "name": "UNSUBSCRIBE/TRANSACTIONS_COUNT",
  "type": "SOCKET_UNSUBSCRIBE_ROOM",
}
`;

exports[`Socket: action unsubscribe transactions type 1`] = `
Object {
  "name": "UNSUBSCRIBE/TRANSACTIONS_TYPE",
  "type": "SOCKET_UNSUBSCRIBE_ROOM",
}
`;

exports[`Socket: action unsubscribe uptime 1`] = `
Object {
  "name": "UNSUBSCRIBE/GET_NODE_UPTIME",
  "type": "SOCKET_UNSUBSCRIBE_ROOM",
}
`;

exports[`Socket: action unsubscribe users count 1`] = `
Object {
  "name": "UNSUBSCRIBE/USERS_COUNT",
  "type": "SOCKET_UNSUBSCRIBE_ROOM",
}
`;
